tests/NormalTests/paczka1/small_fuzzy/46602072.err
Error in line 1: VSWn S82 83,4
Error in line 4: A936 S82 68,9
Error in line 8: PHkxZOR0 A936 2,3
Error in line 11: Rq849G A81 130,5
